<resources>
    <string name="app_name">The Seller</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="no_internet_access">No internet access</string>
    <string name="gps_alert_dialog">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="valid_username">Invalid UserName</string>
    <string name="valid_number">Please inter a valid phone number</string>
    <string name="valid_email">Inter valid email</string>
    <string name="valid_password">Enter six digit password</string>
    <string name="valid_password_login">Invalid password</string>
    <string name="log_out">Logout</string>
    <string name="myTool">My Tool</string>
    <string name="home">Main</string>
    <string name="ToolNameHint">"Write Tool Name"</string>
    <string name="ToolDescHint">"Tool Description"</string>
    <string name="ToolPriceHint">"Enter Price"</string>
    <string name="ToolType">Tool Type</string>
    <string name="price">Price</string>
    <string name="AddTool">Add</string>
    <string name="field_cant_empty">Field can\'t be empty</string>
</resources>
