<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back_login" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/section_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/textColorNormal" />

                <EditText
                    android:id="@+id/EDTUserName"
                    style="@style/RegisterET"
                    android:hint="@string/enter_your_name"
                    android:inputType="text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/section_margin"
                    android:text="@string/password"
                    android:textColor="@color/textColorNormal" />

                <EditText
                    android:id="@+id/EDTpassword"
                    style="@style/RegisterET"
                    android:layout_marginTop="@dimen/sub_section_margin"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/buLogin"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/section_margin"
                android:background="@drawable/buttonblue"
                android:onClick="buLogin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Login"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_action_right_arrow"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buSignUp"
                android:layout_width="300dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/section_margin"
                android:background="@drawable/buttonblue"
                android:onClick="buSignUp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Sign up"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_action_right_arrow"

                    />

            </RelativeLayout>

            <TextView
                android:id="@+id/error_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:background="@drawable/text_red"
                android:text="@string/no_internet_access"
                android:textColor="@android:color/white"
                android:textSize="10dp"
                android:visibility="invisible"></TextView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>
